bynkc/tests/fixtures/negative/317_record_indirect_recursion/input.bynk
commons test {
  type A = { b: B }
  type B = { a: A }
}
